--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,8 @@
-## Unity ##
+## Text files ##
 *.cs diff=csharp text
 *.cginc text
 *.shader text
+## Unity YAML Merge ##
 *.mat merge=unityyamlmerge eol=lf
 *.anim merge=unityyamlmerge eol=lf
 *.unity merge=unityyamlmerge eol=lf
@@ -11,19 +12,11 @@
 *.asset merge=unityyamlmerge eol=lf
 *.meta merge=unityyamlmerge eol=lf
 *.controller merge=unityyamlmerge eol=lf
+## git-lfs ##
 # Unity .asset files that is always serialized as binary
 *.unity3d filter=lfs diff=lfs merge=lfs -text
 *.resS filter=lfs diff=lfs merge=lfs -text
 *LightingData.asset filter=lfs diff=lfs merge=lfs -text
-**/Data/level* filter=lfs diff=lfs merge=lfs -text
-**/Data/resources.assets* filter=lfs diff=lfs merge=lfs -text
-**/Data/sharedassets*.assets filter=lfs diff=lfs merge=lfs -text
-**/Data/sharedassets*.resource filter=lfs diff=lfs merge=lfs -text
-**/Data/globalgamemanagers filter=lfs diff=lfs merge=lfs -text
-**/Data/globalgamemanagers.assets filter=lfs diff=lfs merge=lfs -text
-**/Data/Resources/unity_builtin_extra filter=lfs diff=lfs merge=lfs -text
-**/Data/unity*default*resources filter=lfs diff=lfs merge=lfs -text
-## git-lfs ##
 #Image
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.jpeg filter=lfs diff=lfs merge=lfs -text
