--- a/.github/workflows/unity-build.yaml
+++ b/.github/workflows/unity-build.yaml
@@ -28,6 +28,7 @@ jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         include:
           - os: windows
@@ -71,7 +72,8 @@ jobs:
           overwrite: true
           name: ${{ matrix.build-target }}-Build-Artifacts
           path: |
-            ${{ env.UNITY_PROJECT_PATH }}/**/*.log
+            ${{ env.UNITY_PROJECT_PATH }}/Logs/*.log
+            ${{ env.UNITY_PROJECT_PATH }}/Builds/*.log
             ${{ env.UNITY_PROJECT_PATH }}/Builds/**/*
 
       - name: Clean Artifacts
