--- a/.github/workflows/unity-build.yaml
+++ b/.github/workflows/unity-build.yaml
@@ -74,7 +74,7 @@ jobs:
           path: |
             ${{ env.UNITY_PROJECT_PATH }}/**/*.log
             ${{ env.UNITY_PROJECT_PATH }}/Builds/**/*
-            !${{ env.UNITY_PROJECT_PATH }}/Library/**
+            !${{ env.UNITY_PROJECT_PATH }}/Library/**/*
 
       - name: Clean Artifacts
         if: always()
