use build target path

--- a/.github/workflows/unity-build.yaml
+++ b/.github/workflows/unity-build.yaml
@@ -90,7 +90,7 @@ jobs:
           name: ${{ matrix.build-target }}-Build-Artifacts
           path: |
             ${{ env.UNITY_PROJECT_PATH }}/**/*.log
-            ${{ env.UNITY_PROJECT_PATH }}/Builds/**/*
+            ${{ env.UNITY_PROJECT_PATH }}/Builds/${{ matrix.build-target }}/**/*
             !${{ env.UNITY_PROJECT_PATH }}/Library/**/*
             !${{ env.UNITY_PROJECT_PATH }}/Builds/${{ matrix.build-target }}/*_BackUpThisFolder_ButDontShipItWithYourGame/**
             !${{ env.UNITY_PROJECT_PATH }}/Builds/${{ matrix.build-target }}/*_BurstDebugInformation_DoNotShip/**
